--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "test": "vitest"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.13",
     "axios": "^1.3.4",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.43.8",
+    "react-icons": "^4.8.0",
     "react-router-dom": "^6.9.0",
     "react-toastify": "^9.1.2",
     "sort-by": "^1.2.0"
@@ -37,7 +39,7 @@
     "jsdom": "^19.0.0",
     "postcss": "^8.4.21",
     "prettier": "^2.6.1",
-    "tailwindcss": "^3.3.0",
+    "tailwindcss": "^3.3.1",
     "typescript": "^4.6.3",
     "vite": "^2.8.6",
     "vitest": "^0.7.11"
