--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "axios": "^1.3.4",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
+    "moment": "^2.29.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.43.8",
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.9.0",
+    "react-tailwindcss-datepicker": "^1.5.1",
     "react-toastify": "^9.1.2",
     "sort-by": "^1.2.0"
   },
