--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "devDependencies": {
     "@testing-library/react": "^12.1.4",
     "@types/autoprefixer": "^10.2.0",
+    "@types/node": "^18.15.11",
     "@types/tailwindcss": "^3.1.0",
     "@typescript-eslint/eslint-plugin": "^5.16.0",
     "@typescript-eslint/parser": "^5.16.0",
